Refactored: Updated routes and some changes in the code
